--- a/hlavni_telefon.html
+++ b/hlavni_telefon.html
@@ -205,7 +205,7 @@
             </div>
             <div class="icon-container">
                 <div class="icon">
-                    <a href="Flappy_Bird.html">
+                    <a href="Flappy_Bird (5).html">
                         <img src="obrazky/Flappy Bird.png" alt="Flappy Bird">
                     </a>
                 </div>
@@ -229,7 +229,7 @@
             </div>
             <div class="icon-container">
                 <div class="icon">
-                    <a href="Chrome.html">
+                    <a href="Chrome (5) (4).html">
                         <img src="obrazky/chrome.png" alt="Chrome">
                     </a>
                 </div>
@@ -301,7 +301,7 @@
         }
         
         // Na začátku zobrazíme černou obrazovku
-         document.getElementById('screen').style.display = 'flex';
+         document.getElementById('screen').style.display = 'none';
     </script>
 </body>
 </html>
