--- a/hlavni_telefon.html
+++ b/hlavni_telefon.html
@@ -213,19 +213,19 @@
             </div>
             <div class="icon-container">
                 <div class="icon">
-                    <a href="Snake.html">
-                        <img src="obrazky/snake.png" alt="Snake">
+                    <a href="pong.html">
+                        <img src="obrazky/palka.png" alt="Snake">
                     </a>
                 </div>
-                <span class="icon-label">Snake</span>
+                <span class="icon-label">Pong</span>
             </div>
             <div class="icon-container">
                 <div class="icon">
-                    <a href="Kalendar.html">
-                        <img src="obrazky/kalendar.png" alt="Kalendář">
+                    <a href="poznamky.html">
+                        <img src="obrazky/poznamky.png" alt="Poznámky">
                     </a>
                 </div>
-                <span class="icon-label">Kalendář</span>
+                <span class="icon-label">Poznámky</span>
             </div>
             <div class="icon-container">
                 <div class="icon">
@@ -237,7 +237,7 @@
             </div>
             <div class="icon-container">
                 <div class="icon">
-                    <a href="Dino.html">
+                    <a href="Dino (2).html">
                         <img src="obrazky/Dino.png" alt="Dino">
                     </a>
                 </div>
