--- a/pong.html
+++ b/pong.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Pong pro jednoho hráče</title>
     <style>
-        body {
+         body {
             background-image: url('obrazky/stul.jpg');
             display: flex;
             justify-content: center;
@@ -17,9 +17,9 @@
             position: relative;
         }
         .phone {
-            width: 7.5cm;
+            width: 284px;
             height: 570px;
-            background-color: #fff;
+            background-color: transparent;
             border-radius: 32px;
             border: 8px solid black;
             position: relative;
@@ -34,16 +34,21 @@
             left: 50%;
             transform: translateX(-50%);
             border-radius: 0 0 15px 15px;
-            z-index: 5;
+            z-index: 7;
         }
         .status-bar {
             position: absolute;
             top: 0;
             width: 100%;
+            height: 30px;
+            background-color: white;
             display: flex;
             justify-content: space-between;
+            align-items: center;
             padding: 5px 10px;
             font-size: 12px;
+            color: black;
+            z-index: 6;
         }
         canvas {
             display: block;
@@ -78,8 +83,8 @@
             margin-top: 5px;
         }
         .skin-buttons img {
-            width: 30px;
-            height: 30px;
+            width: 40px;
+            height: 40px;
             cursor: pointer;
             border: 2px solid transparent;
         }
@@ -117,17 +122,28 @@
             cursor: pointer;
             margin-top: 5px;
         }
+        .back-arrow {
+            position: absolute;
+            bottom: 5px;
+            left: 5px;
+            width: 30px;
+            height: 30px;
+            cursor: pointer;
+            z-index: 20;
+        }
+
     </style>
 </head>
 <body>
 <div class="container">
     <div class="phone">
-        <div class="notch"></div>
         <div class="status-bar">
             <span id="time">11:09</span>
-            <span>📶 🥼 🔋</span>
+            📶🛜🔋&nbsp;&nbsp;&nbsp;&nbsp;
         </div>
+        <div class="notch"></div>
         <canvas id="gameCanvas" width="284" height="540"></canvas>
+        <img src="obrazky/leva_sipka.png" class="back-arrow" onclick="goBack()">
         <div class="game-over-screen" id="gameOverScreen">
             <img src="obrazky/game_over.png" alt="Game Over">
             <p>Skóre: <span id="scoreDisplay">0</span></p>
@@ -138,9 +154,9 @@
                 <img src="obrazky/florbal.png" onclick="changeSkin(this, 'obrazky/florbal.png')">
             </div>
             <div class="difficulty-buttons">
-                <button onclick="setDifficulty(1)" data-speed="1">Lehká</button>
-                <button onclick="setDifficulty(2.5)" data-speed="2.5">Střední</button>
-                <button onclick="setDifficulty(4)" data-speed="4">Těžká</button>
+                <button onclick="setDifficulty(1)">Lehká</button>
+                <button onclick="setDifficulty(2.5)">Střední</button>
+                <button onclick="setDifficulty(4)">Těžká</button>
             </div>
         </div>
     </div>
@@ -149,6 +165,9 @@
 <script>
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
+
+    const backgroundImage = new Image();
+    backgroundImage.src = 'obrazky/hriste.png';
 
     let paddleWidth = 60, paddleHeight = 10, paddleX = (canvas.width - paddleWidth) / 2;
     let ballX = canvas.width / 2, ballY = canvas.height / 2;
@@ -159,9 +178,12 @@
 
     function draw() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
+        ctx.drawImage(backgroundImage, 0, 0, canvas.width, canvas.height);
+
         ctx.fillRect(paddleX, 10, paddleWidth, paddleHeight);
         ctx.fillRect(paddleX, canvas.height - paddleHeight - 10, paddleWidth, paddleHeight);
         ctx.drawImage(ballImage, ballX - 8, ballY - 8, 16, 16);
+
         moveBall();
         if (gameRunning) requestAnimationFrame(draw);
     }
@@ -170,9 +192,7 @@
         ballX += ballSpeedX;
         ballY += ballSpeedY;
 
-        if (ballX <= 0 || ballX >= canvas.width) {
-            ballSpeedX *= -1;
-        }
+        if (ballX <= 0 || ballX >= canvas.width) ballSpeedX *= -1;
 
         if ((ballY - 8 <= 20 && ballX > paddleX && ballX < paddleX + paddleWidth) ||
             (ballY + 8 >= canvas.height - 20 && ballX > paddleX && ballX < paddleX + paddleWidth)) {
@@ -180,9 +200,7 @@
             score++;
         }
 
-        if (ballY < 0 || ballY > canvas.height) {
-            endGame();
-        }
+        if (ballY < 0 || ballY > canvas.height) endGame();
     }
 
     function endGame() {
@@ -211,6 +229,10 @@
         event.target.classList.add('selected');
         ballSpeedX = speed;
         ballSpeedY = speed;
+    }
+
+    function goBack() {
+        window.location.href = 'hlavni_telefon.html';
     }
 
     document.addEventListener('mousemove', (e) => {
