--- a/pong.html
+++ b/pong.html
@@ -145,7 +145,7 @@
         <canvas id="gameCanvas" width="284" height="540"></canvas>
         <img src="obrazky/leva_sipka.png" class="back-arrow" onclick="goBack()">
         <div class="game-over-screen" id="gameOverScreen">
-            <img src="obrazky/game_over.png" alt="Game Over">
+            <img src="obrazky/pong_game_over.png" alt="Game Over">
             <p>Skóre: <span id="scoreDisplay">0</span></p>
             <button class="reset-button" onclick="resetGame()">Reset</button>
             <div class="skin-buttons">
