--- a/pong.html
+++ b/pong.html
@@ -163,6 +163,27 @@
 </div>
 
 <script>
+    function updateTime() {
+            var currentTime = new Date();
+            var hours = currentTime.getHours();
+            var minutes = currentTime.getMinutes();
+            minutes = minutes < 10 ? '0' + minutes : minutes;
+
+            var timeString = hours + ':' + minutes;
+            document.getElementById('time').textContent = timeString;
+        }
+
+        setInterval(updateTime, 60000); // Aktualizuje čas každou minutu
+        updateTime(); // Spustí funkci při načtení stránky
+        function toggleScreen() {
+            const screen = document.getElementById('screen');
+            if (screen.style.display === 'none') {
+                screen.style.display = 'flex';
+            } else {
+                screen.style.display = 'none';
+            }
+        }
+        
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
 
