--- a/Mobilni_Banka.html
+++ b/Mobilni_Banka.html
@@ -15,16 +15,7 @@
             background-color: #d3d3d3;
             font-family: Arial, sans-serif;
         }
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            margin: 0;
-            background-color: white;
-            font-family: Arial, sans-serif;
-            color: black;
-        }
+        
         .phone {
             width: 7.5cm;
             height: 15cm;
@@ -156,5 +147,31 @@
         <div class="volume-button-up"></div>
         <div class="volume-button-down"></div>
     </div>
+    <script>
+function updateTime() {
+            var currentTime = new Date();
+            var hours = currentTime.getHours();
+            var minutes = currentTime.getMinutes();
+            minutes = minutes < 10 ? '0' + minutes : minutes;
+
+            var timeString = hours + ':' + minutes;
+            document.getElementById('time').textContent = timeString;
+        }
+
+        setInterval(updateTime, 60000); // Aktualizuje čas každou minutu
+        updateTime(); // Spustí funkci při načtení stránky
+        function toggleScreen() {
+            const screen = document.getElementById('screen');
+            if (screen.style.display === 'none') {
+                screen.style.display = 'flex';
+            } else {
+                screen.style.display = 'none';
+            }
+        }
+        
+
+
+
+    </script>
 </body>
 </html>
