--- a/Kalkulacka.html
+++ b/Kalkulacka.html
@@ -4,148 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phone with Calculator</title>
-    <style>
-        body {
-            background-image: url('obrazky/stul.jpg');
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            margin: 0;
-            background-color: #f0f0f5;
-            font-family: Arial, sans-serif;
-        }
-        .phone {
-            width: 290px;
-            height: 520px;
-            background-color: #fff;
-            border-radius: 30px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            border: 8px solid black;
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding-top: 50px;
-            
-        }
-        .notch {
-            width: 120px;
-            height: 30px;
-            background-color: #000000;
-            border-radius: 0 0 15px 15px;
-            position: absolute;
-            top: -5px;
-            left: 50%;
-            transform: translateX(-50%);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 1;
-        }
-        .sensor {
-            width: 5px;
-            height: 5px;
-            background-color: #665;
-            border-radius: 50%;
-        }
-        .status-bar {
-            width: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            font-size: 14px;
-            padding: 3px 10px;
-            color: #000000;
-        }
-        .power-button {
-            width: 8px;
-            height: 70px;
-            background-color: #000000;
-            position: absolute;
-            right: -11px;
-            top: 29%;
-            transform: translateY(-50%);
-            border-radius: 2px;
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-            cursor: pointer;
-        }
-        .volume-button-up, .volume-button-down {
-            width: 6px;
-            height: 40px;
-            background-color: #000000;
-            position: absolute;
-            left: -11px;
-            transform: translateY(-50%);
-            border-radius: 2px;
-        }
-        .volume-button-up {
-            top: 27%;
-        }
-        .volume-button-down {
-            top: 35%;
-        }
-        .calculator {
-            width: 100%;
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-            box-sizing: border-box;
-        }
-        .display {
-            width: 90%;
-            height: 60px;
-            background: #000;
-            color: #fff;
-            font-size: 2em;
-            text-align: right;
-            padding: 10px;
-            border-radius: 10px;
-            margin-bottom: 10px;
-        }
-        .buttons {
-            width: 90%;
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 10px;
-        }
-        .button {
-            width: 100%;
-            height: 60px;
-            font-size: 1.5em;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #333;
-            color: #fff;
-            border-radius: 10px;
-            cursor: pointer;
-        }
-        .button.orange {
-            background-color: orange;
-        }
-        .button.gray {
-            background-color: gray;
-        }
-       
-        .back-arrow {
-            position: absolute;
-            bottom: 10px;
-            left: 10px;
-            width: 30px;
-            height: 30px;
-            cursor: pointer;
-        }
-
-
-    </style>
+    <link rel="stylesheet" href="styly_celkove.css">
 </head>
+
 <body>
     <div class="phone">
         <div class="notch">
