--- a/Mobilni_Banka.html
+++ b/Mobilni_Banka.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobilní Banka</title>
+    <link rel="stylesheet" href="styly_celkove.css">
     <style>
         body {
             background-image: url('obrazky/stul.jpg');
