--- a/pong.html
+++ b/pong.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Pong pro jednoho hráče</title>
+    <link rel="stylesheet" href="styly_celkove.css">
     <style>
          body {
             background-image: url('obrazky/stul.jpg');
@@ -13,9 +14,7 @@
             margin: 0;
             font-family: Arial, sans-serif;
         }
-        .container {
-            position: relative;
-        }
+       
         .phone {
             width: 284px;
             height: 570px;
