--- a/Dino (2).html
+++ b/Dino (2).html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Dino Game</title>
+    <link rel="stylesheet" href="styly_celkove.css">
     <style>
         body {
             background-image: url('obrazky/stul.jpg');
