--- a/Kalkulacka.html
+++ b/Kalkulacka.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="phone">
+    <div class="phonekalkulacka">
         <div class="notch">
             <div class="sensor"></div>
         </div>
