--- a/poznamky.html
+++ b/poznamky.html
@@ -8,11 +8,13 @@
 </head>
 <body>
 <div class="phonepoznamky">
-    <div class="notch"></div>
+    <div class="screen" id="screen"></div>
+    <div class="notch">
     <div class="sensor"></div>
-    <div class="status-bar">
+    </div>
+    <div class="status-bar-nastaveni">
         <span id="time">11:09</span>
-        <span>📶 🛜🔋</span> 
+        📶 🛜 🔋&nbsp;&nbsp;&nbsp;&nbsp;
     </div>
     <div class="power-button"></div>
     <div class="volume-button-up"></div>
