--- a/pong.html
+++ b/pong.html
@@ -10,7 +10,7 @@
             width: 100%;
             height: calc(96% - 30px);
             position: absolute;
-            top: 30px;
+            top: 35px;
         }
         </style>
 </head>
@@ -22,7 +22,7 @@
         </div>
 
         <!-- Status Bar -->
-        <div class="status-bar">
+        <div class="status-bar-nastaveni">
             <span id="time">11:09</span>
             <div>
                 <span>📶</span> <span>🛜</span> <span>🔋</span>&nbsp;&nbsp;&nbsp;&nbsp;
