--- a/Mobilni_Banka.html
+++ b/Mobilni_Banka.html
@@ -9,11 +9,13 @@
 </head>
 <body>
     <div class="phonemobilnibanka">
-        <div class="notch"></div>
+        <div class="screen" id="screen"></div> 
+        <div class="notch">
     <div class="sensor"></div>
-        <div class="status-bar">
+       </div>
+        <div class="status-bar-nastaveni">
             <span id="time">11:09</span>
-            <span>📶 🛜 🔋</span>
+            📶 🛜 🔋&nbsp;&nbsp;&nbsp;&nbsp;
         </div>
         <div class="login-container">
             <h1>Mějte své <b>finance pod kontrolou</b></h1>
