--- a/Fotky.html
+++ b/Fotky.html
@@ -9,20 +9,19 @@
 </head>
 <body>
     <div class="phonefotky">
-        <div class="notch">
-            <div class="sensor"></div>
-        </div>
-        <div class="status-bar">
+        <div class="screen" id="screen"></div>
+        <div class="notch"> 
+        <div class="sensor"></div>
+    </div>
+        <div class="status-bar-nastaveni">
             <span id="time">15:10</span>
-            <div>
-                <span>📶</span> <span>🛜</span> <span>🔋</span>&nbsp;&nbsp;&nbsp;&nbsp;
-            </div>
+            📶 🛜 🔋&nbsp;&nbsp;&nbsp;&nbsp; 
         </div>
         <div class="power-button"></div>
         <div class="volume-button-up"></div>
         <div class="volume-button-down"></div>
-        <div class="header" style="background: #b8a9a5; padding: 20px;">
-            <h1>Knihovna</h1>
+        <div class="header" style="background: #b8a9a5; padding: 20px;top: 10px;">
+            <h1>Galerie</h1>
         </div>
         <div class="gallery">
             <div><img src="obrazky/spongebob_1.png" alt="Knihovna obrázek 1"></div>
