--- a/Dino (2).html
+++ b/Dino (2).html
@@ -17,10 +17,13 @@
 <body>
 <div class="container">
     <div class="phonedino">
-        <div class="notch"></div>
-        <div class="status-bar">
+        <div class="screen" id="screen"></div>
+        <div class="notch">
+        <div class="sensor"></div>
+        </div>
+        <div class="status-bar-nastaveni">
             <span id="time">11:09</span>
-            <span>📶 🛜 🔋</span>
+            📶 🛜 🔋&nbsp;&nbsp;&nbsp;&nbsp;
         </div>
         <canvas id="gameCanvas" width="284" height="250"></canvas>
         <div class="game-over-dino" id="gameOverScreen">
