--- a/Chrome (5) (4).html
+++ b/Chrome (5) (4).html
@@ -15,7 +15,7 @@
         <div class="sensor"></div>
     </div>
 
-    <div class="status-bar">
+    <div class="status-bar-nastaveni">
         <span id="time">11:09</span>
         <div class="">
             <span>📶</span> <span>🛜</span> <span>🔋</span>&nbsp;&nbsp;&nbsp;&nbsp;
