--- a/Fotky.html
+++ b/Fotky.html
@@ -22,7 +22,7 @@
         <div class="volume-button-up"></div>
         <div class="volume-button-down"></div>
         <div class="header" style="background: #b8a9a5; padding: 20px;">
-            <h1>Knihovna</h1>
+            <h1>Galerie</h1>
         </div>
         <div class="gallery">
             <div><img src="obrazky/spongebob_1.png" alt="Knihovna obrázek 1"></div>
