--- a/Fotky.html
+++ b/Fotky.html
@@ -9,23 +9,20 @@
 </head>
 <body>
     <div class="phonefotky">
-        <div class="screen" id="screen"></div>
-        <div class="notch"> 
-        <div class="sensor"></div>
-    </div>
-        <div class="status-bar-nastaveni">
+        <div class="notch">
+            <div class="sensor"></div>
+        </div>
+        <div class="status-bar">
             <span id="time">15:10</span>
-            📶 🛜 🔋&nbsp;&nbsp;&nbsp;&nbsp; 
+            <div>
+                <span>📶</span> <span>🛜</span> <span>🔋</span>&nbsp;&nbsp;&nbsp;&nbsp;
+            </div>
         </div>
         <div class="power-button"></div>
         <div class="volume-button-up"></div>
         <div class="volume-button-down"></div>
-<<<<<<< HEAD
         <div class="header" style="background: #b8a9a5; padding: 20px;">
-=======
-        <div class="header" style="background: #b8a9a5; padding: 20px;top: 10px;">
->>>>>>> 97b597d5462f4cbc5066047c6f9b8c4725c5b464
-            <h1>Galerie</h1>
+            <h1>Knihovna</h1>
         </div>
         <div class="gallery">
             <div><img src="obrazky/spongebob_1.png" alt="Knihovna obrázek 1"></div>
