--- a/Fotky.html
+++ b/Fotky.html
@@ -68,15 +68,15 @@
             <div class="sensor"></div>
         </div>
         <div class="status-bar">
-            <span id="time">15:10</span>
+            <p id="time">15:10</p>
             <div>
-                <span>📶</span> <span>🛜</span> <span>🔋</span>&nbsp;&nbsp;&nbsp;&nbsp;
+               📶🛜🔋</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
         </div>
         <div class="power-button"></div>
         <div class="volume-button-up"></div>
         <div class="volume-button-down"></div>
-        <div class="header" style="background: #c29584; padding: 20px;">
+        <div class="header" style="background: #c29584; padding: 20px; margin-top: 37px;">
             <h1>Galerie</h1>
         </div>
         <div class="gallery">
