--- a/hlavni_telefon.html
+++ b/hlavni_telefon.html
@@ -103,7 +103,9 @@
                 <img src="obrazky/telefon_2.png" alt="Telefon">
             </div>
             <div class="icon">
-                <img src="obrazky/zpravy_2.png" alt="Zprávy">
+                <a href="uzivatel.html">
+                <img src="obrazky/uzivate.jpg" alt="Uzivatel">
+                </a>
             </div>
             <div class="icon">
                 <a href="fotak.html">
