--- a/Fotky.html
+++ b/Fotky.html
@@ -76,7 +76,7 @@
         <div class="power-button"></div>
         <div class="volume-button-up"></div>
         <div class="volume-button-down"></div>
-        <div class="header" style="background: #c29584; padding: 20px; margin-top: 37px;">
+        <div class="galeriebar">
             <h1>Galerie</h1>
         </div>
         <div class="gallery">
