--- a/hlavni_telefon.html
+++ b/hlavni_telefon.html
@@ -103,8 +103,8 @@
                 <img src="obrazky/telefon_2.png" alt="Telefon">
             </div>
             <div class="icon">
-                <a href="uzivatel.html">
-                <img src="obrazky/uzivate.jpg" alt="Uzivatel">
+                <a href="zpravy.html">
+                <img src="obrazky/zpravy_2.png" alt="Uzivatel">
                 </a>
             </div>
             <div class="icon">
