--- a/Mobilni_Banka.html
+++ b/Mobilni_Banka.html
@@ -19,6 +19,7 @@
         </div>
         <div class="login-container">
             <h1>Mějte své <b>finance pod kontrolou</b></h1>
+            <input type="text" placeholder="Jméno">
             <input type="password" placeholder="Heslo">
             <button>Přihlásit</button>
         </div>
