--- a/volani.html
+++ b/volani.html
@@ -35,7 +35,7 @@
             border-radius: 15px;
             padding: 10px;
             width: 90%;
-            margin-top: 60%; /* Posun prvního kontaktu na 25 % výšky */
+            margin-top: 60%; 
             margin-bottom: 20%;
             scrollbar-width: none;
         }
