--- a/pong.html
+++ b/pong.html
@@ -16,12 +16,12 @@
 </head>
 <body>
     <div class="phonepong">
-        <!-- Notch with Sensor -->
+      
         <div class="notch">
             <div class="sensor"></div>
         </div>
 
-        <!-- Status Bar -->
+       
         <div class="status-bar-nastaveni">
             <span id="time">11:09</span>
             <div>
@@ -62,8 +62,8 @@
             document.getElementById('time').textContent = timeString;
         }
 
-        setInterval(updateTime, 60000); // Aktualizuje čas každou minutu
-        updateTime(); // Spustí funkci při načtení stránky
+        setInterval(updateTime, 60000); 
+        updateTime(); 
         function toggleScreen() {
             const screen = document.getElementById('screen');
             if (screen.style.display === 'none') {
