--- a/Kalkulacka.html
+++ b/Kalkulacka.html
@@ -63,8 +63,8 @@
             document.getElementById('time').textContent = timeString;
         }
 
-        setInterval(updateTime, 60000); // Aktualizuje čas každou minutu
-        updateTime(); // Spustí funkci při načtení stránky
+        setInterval(updateTime, 60000); 
+        updateTime(); 
         let display = document.getElementById("display");
         let currentInput = "0";
 
